[package]
name = "iroh-one"
readme = "README.md"
description = "all of iroh in a single binary"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap = { workspace = true, features = ["derive"] }
config.workspace = true
futures.workspace = true
hyper.workspace = true
iroh-gateway.workspace = true
iroh-p2p.workspace = true
iroh-unixfs.workspace = true
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
iroh-store.workspace = true
iroh-util.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }
tracing.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger.workspace = true
log = "0.4"

[dev-dependencies]
http.workspace = true

[features]
http-uds-gateway = ["tempfile"]
