[package]
name = "iroh-rpc-client"
authors = ["Friedel Ziegelmayer <me@dignifiedquire.com>", "ramfox"]
description = "RPC type client for iroh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
bytes.workspace = true
cid.workspace = true
config.workspace = true
futures.workspace = true
iroh-rpc-types.workspace = true
iroh-util.workspace = true
libp2p = { workspace = true, features = ["gossipsub"] }
log.workspace = true
quic-rpc = { workspace = true, features = ["http2"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio-stream = { workspace = true, features = ["net"] }
