[package]
name = "iroh-store"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Implementation of the storage part of iroh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ahash.workspace = true
async-stream.workspace = true
bytecheck.workspace = true
bytes.workspace = true
cid.workspace = true
clap = { workspace = true, features = ["derive"] }
config.workspace = true
futures.workspace = true
git-version.workspace = true
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
iroh-util.workspace = true
log.workspace = true
multihash.workspace = true
rkyv = { workspace = true, features = ["validation"] }
rocksdb.workspace = true
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true, features = ["write"] }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
libipld.workspace = true
rayon.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[[bench]]
name = "store"
harness = false

[[bench]]
name = "rpc"
harness = false
